--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <!-- Add your site or application content here -->
 <div id="messages"></div>
-<form name="contact" method="POST" data-netlify="true" action="submitted">
+<form name="contact" method="POST" data-netlify="true" action="index">
     <p>
         <textarea name="message"></textarea>
     </p>
