stripped submission data down to bare minimum

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <div id="messages"></div>
 <form name="contact" method="POST" data-netlify="true" action="index">
     <p>
-        <textarea name="message"></textarea>
+        <textarea name="text"></textarea>
     </p>
-    <label>Select your user name: <select name="who">
+    <label>Select your user name: <select name="username">
         <option value="student">student</option>
         <option value="professor">professor</option>
     </select></label>
